--- a/src/css/Produtos.module.css
+++ b/src/css/Produtos.module.css
@@ -1,9 +1,27 @@
 .produto{
   width: 100%;
-  height: 500px;
+  height: 600px;
+}
+.button{
+  margin-top: 70px;
+  margin-left: 47%;
+  width: 100px;
+  height: 60px;
+  background-color: aqua;
+  color:#9400d3;
+}
+.tituloProduto{
+  margin-left: 45%;
+
+}
+
+.button:hover{
+  background-color: #9400d3;
+  color:aqua;
 }
 .table{
   margin-top: 50px;
-  background-color: #ccc;
+  background-color: aqua;
   margin-left: 40%;
+  color:#9400d3;
 }
