--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -1,13 +1,8 @@
-*{
-  margin: 0;
-  padding:0 ;
-  box-sizing: border-box;
-  text-decoration: none;
-}
+
 .menu {
   background-color: #0E0255;
   width: 100%;
-  height: 60px;
+  height: 10vh;
   margin: 0 auto;
   padding: 10px;
   display: flex;
