--- a/src/css/ModalInsert.module.css
+++ b/src/css/ModalInsert.module.css
@@ -1,6 +1,42 @@
 .modInsert{
-  margin-top: 10px;
-  margin-left: 30%;
+  border: 2px solid #222;
+  border-radius: 10px;
+  padding: 30px;
   width: 500px;
-  margin-bottom: 50px;
+  background-color: white;
+}
+
+.modInsert form button{
+  padding: 5px 15px;
+  background-color: green;
+  color: white;
+  font-weight: bold;
+  margin: 5px;
+
+}
+
+
+.modInsert form label{
+  display: inline-block;
+  width: 80px;
+}
+
+.modInsert form input{
+  padding: 5px;
+  margin-bottom: 5px;
+
+}
+
+
+
+.fundo{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #555555dd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
