--- a/src/css/Produtos.module.css
+++ b/src/css/Produtos.module.css
@@ -1,14 +1,16 @@
 .produto{
+  padding-top: 10vh;
   width: 100%;
-  height: 600px;
+  min-height: 85vh;
 }
 .button{
-  margin-top: 70px;
-  margin-left: 47%;
-  width: 100px;
-  height: 60px;
+  margin-top: 20px;
+  margin-left: 30%;
+  padding: 10px 20px;
+  border-radius: 10px;
   background-color: aqua;
   color:#9400d3;
+  font-weight: bold;
 }
 .tituloProduto{
   margin-left: 45%;
@@ -20,8 +22,60 @@
   color:aqua;
 }
 .table{
-  margin-top: 50px;
-  background-color: aqua;
-  margin-left: 40%;
-  color:#9400d3;
+  width: 80%;
+  margin: 50px auto;
 }
+
+.table thead tr th:nth-child(1){
+  width: 20%;
+}
+.table thead tr th:nth-child(2){
+  width: 25%;
+}
+.table thead tr th:nth-child(3){
+  width: 30%;
+}
+.table thead tr th:nth-child(4){
+  width: 10%;
+}
+.table thead tr th:nth-child(5){
+  width: 15%;
+}
+
+.table td,th{
+  padding: 10px;
+}
+
+.table thead{
+  background-color: aqua;
+  color:#9400d3;
+  
+}
+
+.table tbody tr:nth-child(2n){
+  background-color: lightgray;
+}
+
+.table tbody tr td button{
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+
+.table tbody tr td button:nth-child(2n-1){
+  background-color: royalblue;
+  margin-right: 5px;
+}
+.table tbody tr td button:nth-child(2n){
+  background-color: red;
+}
+
+.table tfoot{
+  background-color: black;
+  padding: 10px;
+  color: white;
+  text-align: center;
+}
+
