--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -1,6 +1,6 @@
 .footer{
   width: 100%;
-  height: 15vh;
+  height: 20vh;
   background-color: #0E0255;
   display: flex;
   justify-content: center;
@@ -8,6 +8,15 @@
 }
 
 .titFooter{
-  text-align: center;
   color: white;
+  font-size: 20px;
+  text-align: center;
+}
+
+
+.rede{
+  width: 50px;
+  height: 50px;
+  color: aqua;
+  padding: 4px;
 }
