--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -1,7 +1,7 @@
 .login{
   width: 100%;
   height: 600px;
-  background-color: white;
+  background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.3));
 }
 
 .user{
@@ -32,16 +32,19 @@
 
 #btnCadastrar{
   margin-top: 30px;
-  margin-left: 35%;
-  width: 100px;
-  height: 60px;
+  margin-left: 30%;
+  width: 150px;
+  border-radius: 30px;
+  height: 40px;
   background-color: aqua;
   color:#9400d3;
+  font-weight: 900;
 
 }
 #btnCadastrar:hover{
-  background-color: #9400d3;
-  color:aqua;
+  background-color: #fff;
+  color: black;
+  font-weight: 900;
 }
 #userInput{
   margin-left: 20px;
