--- a/src/css/Produtos.module.css
+++ b/src/css/Produtos.module.css
@@ -1,7 +1,9 @@
 .produto{
+  background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.3));
   padding-top: 10vh;
   width: 100%;
   min-height: 85vh;
+
 }
 .button{
   margin-top: 20px;
@@ -14,7 +16,6 @@
 }
 .tituloProduto{
   margin-left: 45%;
-
 }
 
 .button:hover{
