--- a/src/css/Sobre.module.css
+++ b/src/css/Sobre.module.css
@@ -1,4 +1,17 @@
 .sobre{
+  background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.3));
   width: 100%;
   height: 600px;
+}
+.titulo{
+  padding-top: 200px;
+  margin-left: 30%;
+  color:aliceblue;
+}
+.nomeProf{
+  color:gold;
+}
+h2{
+  margin-top: 20px;
+  margin-left: 40%;
 }
