--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -1,26 +1,32 @@
-
 .menu {
-  background-color: #0E0255;
   width: 100%;
   height: 10vh;
   margin: 0 auto;
   padding: 10px;
   display: flex;
-
   list-style: none;
   color: white;
   position: fixed;
+}
+.menu:hover{
+  background-color: transparent;
 }
 
 .menuNav {
   font-size: 25px;
 }
+
 .menuNnavulli {
   display: flex;
   list-style: none;
+  text-decoration: none;
+  padding: 15px;
 }
 
 .tlink {
   color: white;
   padding: 5px;
+}
+.tlink:hover{
+  color: aqua;
 }
