--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -1,4 +1,42 @@
 .home{
   width: 100%;
   height: 600px;
+ 
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+  background-attachment: fixed;
+  background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.3)),
+  url(../img/game.jpg);
+}
+.btn{
+  border: 2px solid black;
+  padding: 7px 20px;
+  border-radius: 70px;
+  background-color: white;
+  font-size:20px;
+  color:black;
+  letter-spacing: 1px;
+  text-decoration: none;
+  transition: .350s;
+}
+.produtos{
+  width: 100%;
+  height: 100vh;
+  color:#fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0 20px;
+}
+.btn:hover{
+  background-color: black;
+  color:aqua;
 }
