--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -12,7 +12,7 @@
   background-position: 50%;
   background-attachment: fixed;
   background-image: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.3)),
-  url(../img/game.jpg);
+  url(../img/Game.jpg);
 }
 .btn{
   border: 2px solid black;
